[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/graphics/animations/butao.tres" type="SpriteFrames" id=1]
[ext_resource path="res://scripts/base/butao.gd" type="Script" id=3]

[node name="botao_area" type="Area2D" groups=[
"__botao",
"__obj",
]]
scale = Vector2( 0.75, 0.75 )
z_index = -2
script = ExtResource( 3 )

[node name="botao_sprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = ExtResource( 1 )

[node name="botao_collision" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -8, -32, -24, -16, -24, 0, -8, 8, 8, 8, 24, 0, 24, -16, 8, -32 )

[connection signal="area_entered" from="." to="." method="_on_botao_area_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_botao_area_area_exited"]
